Avance casi final
esto es un avance

--- a/tropicalBlast/css/style.css
+++ b/tropicalBlast/css/style.css
@@ -2,6 +2,12 @@ body {
   background-color: #76bd9c;
 }
 
+.logo {
+  background-image: url(../imgs/Logo.png);
+  width: 1.7em;
+  height: 1.7em;
+}
+
 .nav-link {
   color: #FFFBDF;
 }
@@ -21,6 +27,11 @@ a {
 .spacer {
   padding: 2em 0 0 2.2em;
 }
+@media only screen and (max-width: 480px) {
+  .spacer {
+    padding: 2em 0 0 1.4em;
+  }
+}
 
 .spacerRegistro {
   padding: 2em 0 0 3em;
@@ -37,12 +48,67 @@ a {
   background-repeat: none;
   padding: 1em 16.5em;
 }
-
+@media only screen and (max-width: 480px) {
+  .photo {
+    height: 152px;
+    padding: 0;
+  }
+}
 .titles {
   font-size: 42pt;
   color: #34656D;
   border-bottom: 5px solid #FFFBDF;
   margin: 2em 0.6em 1em;
+}
+@media only screen and (max-width: 480px) {
+  .titles {
+    font-size: 21pt;
+    border-bottom: 2px solid #FFFBDF;
+    margin: 1em 0.6em 0;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .titles {
+    font-size: 32pt;
+    margin: 1em 0.6em 0.5em;
+  }
+}
+
+.containerActivity {
+  width: 100%;
+  height: 29em;
+  overflow: hidden;
+}
+@media only screen and (max-width: 480px) {
+  .containerActivity {
+    width: 100%;
+    height: 15.5em;
+    padding: 0 1em 0 0px;
+  }
+}
+
+.containerActivityA {
+  width: 100%;
+  height: 13em;
+  overflow: hidden;
+}
+@media only screen and (max-width: 480px) {
+  .containerActivityA {
+    width: 100%;
+    height: 7em;
+  }
+}
+
+.containerActivityB {
+  width: 100%;
+  height: 15em;
+  overflow: hidden;
+}
+@media only screen and (max-width: 480px) {
+  .containerActivityB {
+    width: 100%;
+    height: 10em;
+  }
 }
 
 .containerActivity1 {
@@ -52,6 +118,17 @@ a {
   background-image: url(../imgs/artista1.jpg);
   border-radius: 1em;
 }
+@media only screen and (max-width: 480px) {
+  .containerActivity1 {
+    width: 96px;
+    height: 208px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerActivity1 {
+    width: 215px;
+  }
+}
 
 .containerActivity2 {
   width: 401px;
@@ -59,6 +136,17 @@ a {
   overflow: hidden;
   background-image: url(../imgs/artista2.jpg);
   border-radius: 1em;
+}
+@media only screen and (max-width: 480px) {
+  .containerActivity2 {
+    width: 96px;
+    height: 208px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerActivity2 {
+    width: 215px;
+  }
 }
 
 .containerActivity3 {
@@ -68,6 +156,21 @@ a {
   background-image: url(../imgs/artista3.png);
   border-radius: 1em;
 }
+@media only screen and (max-width: 480px) {
+  .containerActivity3 {
+    width: 96px;
+    height: 208px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerActivity3 {
+    width: 215px;
+  }
+}
+
+.lugarpad {
+  padding: 0 0 0 1.1em;
+}
 
 .containerInfo {
   width: 100%;
@@ -75,11 +178,22 @@ a {
   margin: 15.5em 0 0 0;
   padding: 0 1em;
 }
+@media only screen and (max-width: 480px) {
+  .containerInfo {
+    height: 10px;
+    margin: 7.5em 0 0 0;
+  }
+}
 
 .containerSubAct {
   width: 100%;
   height: 6em;
   margin: 0.5em 0em 0em 0;
+}
+@media only screen and (max-width: 480px) {
+  .containerSubAct {
+    height: 1em;
+  }
 }
 
 .subTitle {
@@ -87,31 +201,91 @@ a {
   color: #FFFBDF;
   text-align: center;
 }
+@media only screen and (max-width: 480px) {
+  .subTitle {
+    font-size: 9pt;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .subTitle {
+    font-size: 16pt;
+  }
+}
 
 .textInfo {
   font-size: 16pt;
   color: #FFFBDF;
+}
+@media only screen and (max-width: 480px) {
+  .textInfo {
+    font-size: 9pt;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .textInfo {
+    font-size: 14pt;
+  }
 }
 
 .textInfoDark {
   font-size: 16pt;
   color: #34656D;
 }
+@media only screen and (max-width: 480px) {
+  .textInfoDark {
+    font-size: 9pt;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .textInfoDark {
+    font-size: 14pt;
+  }
+}
 
 .text {
   font-size: 12pt;
   color: #FFFBDF;
+}
+@media only screen and (max-width: 480px) {
+  .text {
+    font-size: 9pt;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .text {
+    font-size: 12pt;
+  }
 }
 
 .textDark {
   font-size: 12pt;
   color: #34656D;
 }
+@media only screen and (max-width: 480px) {
+  .textDark {
+    font-size: 9pt;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .textDark {
+    font-size: 12pt;
+  }
+}
 
 .textDetail {
   font-size: 21pt;
   color: #FFFBDF;
   text-align: center;
+}
+@media only screen and (max-width: 480px) {
+  .textDetail {
+    font-size: 9pt;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .textDetail {
+    font-size: 12pt;
+  }
 }
 
 .containerSubAct5 {
@@ -123,15 +297,37 @@ a {
   background-image: url(../imgs/artista5.jpg);
   border-radius: 1em;
 }
+@media only screen and (max-width: 480px) {
+  .containerSubAct5 {
+    width: 190px;
+    height: 66px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerSubAct5 {
+    width: 458px;
+  }
+}
 
 .containerSubAct6 {
   width: 837px;
   height: 142px;
   overflow: hidden;
-  margin: 0em 0.9em 0em 0em;
   padding: 0 1em;
   background-image: url(../imgs/artista6.jpg);
   border-radius: 1em;
+}
+@media only screen and (max-width: 480px) {
+  .containerSubAct6 {
+    width: 190px;
+    height: 66px;
+    margin: 0em 0em 0em 12px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerSubAct6 {
+    width: 458px;
+  }
 }
 
 .containerSubAct4 {
@@ -143,6 +339,19 @@ a {
   padding: 0 1em;
   margin: 0em 0 0 1.5em;
 }
+@media only screen and (max-width: 480px) {
+  .containerSubAct4 {
+    width: 106px;
+    height: 66px;
+    margin: 0;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerSubAct4 {
+    width: 215px;
+    margin: 0em 0 0 1em;
+  }
+}
 
 .containerSubAct7 {
   width: 404.494px;
@@ -152,6 +361,17 @@ a {
   border-radius: 1em;
   padding: 0 1em;
 }
+@media only screen and (max-width: 480px) {
+  .containerSubAct7 {
+    width: 106px;
+    height: 66px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerSubAct7 {
+    width: 215px;
+  }
+}
 
 .containerLugar {
   width: 837px;
@@ -159,23 +379,60 @@ a {
   overflow: hidden;
   margin: 0em 0.9em 0em 0em;
 }
+@media only screen and (max-width: 480px) {
+  .containerLugar {
+    width: 10em;
+    height: 2em;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerLugar {
+    width: 430px;
+  }
+}
 
 .containerLugarSmall {
   width: 404.494px;
   height: 4.4em;
   overflow: hidden;
 }
+@media only screen and (max-width: 480px) {
+  .containerLugarSmall {
+    width: 6.5em;
+    height: 2em;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerLugarSmall {
+    width: 215px;
+  }
+}
 
 .containerFecha {
   margin: 0 0 0 -9px;
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerFecha {
+    margin: 0 0 0 -0.5em;
+  }
 }
 
 .containerFechaLarge {
   margin: 0 0 0 2.7em;
 }
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerFechaLarge {
+    margin: 0 0 0 -0.2em;
+  }
+}
 
 .containerFechaSmall {
   margin: 0 0 0 0.4em;
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerFechaSmall {
+    margin: 0 0 0 -1.7em;
+  }
 }
 
 .contairnerCategoryDetail {
@@ -185,11 +442,33 @@ a {
   padding: 0.4em 0;
   opacity: 75%;
 }
+@media only screen and (max-width: 480px) {
+  .contairnerCategoryDetail {
+    width: 100%;
+    height: 2.5em;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .contairnerCategoryDetail {
+    height: 3em;
+    width: 15em;
+  }
+}
 
 .titleCategory {
   font-size: 28pt;
   color: #34656D;
   text-align: center;
+}
+@media only screen and (max-width: 480px) {
+  .titleCategory {
+    font-size: 12pt;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .titleCategory {
+    font-size: 20pt;
+  }
 }
 
 .containerPago {
@@ -200,25 +479,79 @@ a {
   margin: 8em 0em 0 51em;
   opacity: 75%;
 }
-
-.containerFechaR {
-  padding: 0 0 0 25em;
+@media only screen and (max-width: 480px) {
+  .containerPago {
+    height: 2.9em;
+    width: 7em;
+    margin: 3.7em 0em 0 15em;
+  }
 }
-
-.detailFoto {
-  height: 407.357px;
-  width: 399.726px;
-  background-color: #76bd9c;
-  border-radius: 1em;
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerPago {
+    height: 3em;
+    width: 10em;
+    margin: 10em 0em 0 21em;
+  }
 }
 
 .containerDetail {
-  width: 824.808px;
-  height: 407.651px;
+  width: 100%;
+  height: 23em;
+}
+@media only screen and (max-width: 480px) {
+  .containerDetail {
+    width: 20em;
+    height: 50em;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerDetail {
+    height: 60em;
+  }
+}
+
+.detailFoto {
+  height: 401px;
+  width: 407px;
+  background-color: #76bd9c;
+  border-radius: 1em;
+}
+@media only screen and (max-width: 480px) {
+  .detailFoto {
+    width: 20em;
+    height: 20em;
+    border-radius: 0;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .detailFoto {
+    width: 44em;
+    height: 44em;
+    border-radius: 0;
+  }
+}
+
+.containerDetailInfo {
+  width: 825px;
+  height: 401px;
   background-image: url(../imgs/infopop.png);
   background-color: #34656D;
   padding: 2em 3em;
   border-radius: 1em;
+}
+@media only screen and (max-width: 480px) {
+  .containerDetailInfo {
+    width: 20em;
+    height: 25em;
+    border-radius: 0;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerDetailInfo {
+    width: 44em;
+    height: 20em;
+    border-radius: 0;
+  }
 }
 
 .containerBttnRegistro {
@@ -228,17 +561,41 @@ a {
   padding: 4em 15em;
   margin: 10em 5em 0 0;
 }
+@media only screen and (max-width: 480px) {
+  .containerBttnRegistro {
+    margin: 0;
+    padding: 3em 2em;
+    height: 15em;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerBttnRegistro {
+    padding: 4em 4em;
+  }
+}
 
 .botonRegistrarse {
   width: 193px;
   height: 77px;
-  background-color: #76bd9c;
+  background-color: #FFFBDF;
   border-radius: 1.5em;
   padding: 0.9em 0.8em;
   margin: 0em 21em 9em;
   border: solid;
-  border-color: #FFFBDF;
+  border-color: #76bd9c;
   border-width: 10px;
+}
+@media only screen and (max-width: 480px) {
+  .botonRegistrarse {
+    width: 193px;
+    height: 77px;
+    margin: 0em 3.6em 1.5em;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .botonRegistrarse {
+    margin: 0em 13em 5em;
+  }
 }
 
 .textBoton {
@@ -253,50 +610,167 @@ a {
   background-image: url(../imgs/artista6.jpg);
   padding: 1em 0;
 }
+@media only screen and (max-width: 480px) {
+  .circulo {
+    width: 3em;
+    height: 3em;
+  }
+}
 
 .containerEventosRelacionados {
   width: 5em;
   height: 7em;
-  padding: 0em 0 0 1em;
+  padding: 0em 0 0 6em;
 }
-
-.footer {
-  width: 100%;
-  height: 120px;
-  background-color: #334443;
+@media only screen and (max-width: 480px) {
+  .containerEventosRelacionados {
+    width: 0;
+    height: 4em;
+    padding: 0em 0 0 1em;
+  }
 }
-
-.containerRegistro {
-  width: 1256px;
-  height: 840px;
-  background-color: #34656D;
-  border-radius: 3em;
-  padding: 0 2.5em;
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerEventosRelacionados {
+    padding: 0em 0 0 3em;
+  }
 }
 
 .containerDescription {
   width: 100%;
   height: 12em;
 }
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerDescription {
+    height: 10em;
+  }
+}
+
+.containerRegistro {
+  width: 1256px;
+  height: 28em;
+  background-color: #34656D;
+  border-radius: 3em;
+}
+@media only screen and (max-width: 480px) {
+  .containerRegistro {
+    width: 17em;
+    height: 27.7em;
+    padding: 0 1.5em 0 1em;
+    margin: 0 0 0.7em;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerRegistro {
+    width: 42em;
+  }
+}
+
+.containerTolal {
+  height: 6em;
+  width: 100%;
+  padding: 0 0 0 36em;
+}
+@media only screen and (max-width: 480px) {
+  .containerTolal {
+    padding: 0 0 0 6.6em;
+    height: 2em;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerTolal {
+    padding: 0 0 0 17em;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .nextbtn {
+    width: 3em;
+  }
+}
 
 .lines {
   width: 98%;
   height: 3px;
   background-color: #FFFBDF;
-  margin: 0 12px;
+  margin: 1em 12px;
+}
+@media only screen and (max-width: 480px) {
+  .lines {
+    height: 2px;
+    margin: 0em 12px;
+  }
 }
 
 .nextbackBttn {
-  padding: 2em 0;
+  padding: 1em 0;
+}
+@media only screen and (max-width: 480px) {
+  .nextbackBttn {
+    padding: 0em 5.5em 1.1em 0;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .nextbackBttn {
+    padding: 1em 7.5em 1.1em 0;
+  }
 }
 
 .containerResumen {
   width: 1256px;
-  height: 1155px;
+  height: 45em;
   background-color: #34656D;
   border-radius: 3em;
   padding: 0 2.5em 0 2em;
   margin: 0 0 5em;
+}
+@media only screen and (max-width: 480px) {
+  .containerResumen {
+    width: 17em;
+    height: 35em;
+    padding: 0 1.5em 0 1em;
+    margin: 0 0 2.7em;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerResumen {
+    width: 42em;
+  }
+}
+
+.containerRegistroInfo {
+  width: 78.5em;
+  height: 5em;
+  padding: 0em 2em 0em 2em;
+}
+@media only screen and (max-width: 480px) {
+  .containerRegistroInfo {
+    width: 14.5em;
+    height: 6em;
+    padding: 0.5em 0em 0em 0em;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerRegistroInfo {
+    width: 41em;
+  }
+}
+
+.containerConfInfo {
+  width: 78.5em;
+  height: 3.4em;
+  padding: 0em 2em 0em 2em;
+}
+@media only screen and (max-width: 480px) {
+  .containerConfInfo {
+    width: 14.5em;
+    height: 5em;
+    padding: 0.5em 0em 0em 0em;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerConfInfo {
+    width: 41em;
+  }
 }
 
 .titlesRegistro {
@@ -304,43 +778,190 @@ a {
   color: #FFFBDF;
   border-bottom: 5px solid;
   text-align: center;
-  padding: 1.4em 0 0.8em 0;
+  padding: 0.4em 0 0.4em 0;
   border-bottom: solid;
+}
+@media only screen and (max-width: 480px) {
+  .titlesRegistro {
+    font-size: 12pt;
+    border-bottom: 2px solid;
+    padding: 1em 0;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .titlesRegistro {
+    font-size: 21pt;
+    padding: 1em 0 0.6em 0;
+  }
 }
 
 .textRegistro {
-  font-size: 14pt;
+  font-size: 18pt;
   color: #FFFBDF;
-  padding: 3.4em 0px 0.8em 1em;
+  padding: 0;
+}
+@media only screen and (max-width: 480px) {
+  .textRegistro {
+    font-size: 9pt;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .textRegistro {
+    font-size: 14pt;
+  }
 }
 
 .subTitulleRegistro {
-  font-size: 24pt;
+  font-size: 18pt;
   color: #FFFBDF;
-  padding: 1.7em 0 0.8em 0;
+}
+@media only screen and (max-width: 480px) {
+  .subTitulleRegistro {
+    font-size: 10pt;
+    padding: 0 2em 0 0;
+    text-align: center;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .subTitulleRegistro {
+    font-size: 16pt;
+  }
 }
 
 .textCostoTotal {
-  font-size: 32pt;
+  font-size: 26pt;
   color: #FFFBDF;
-  padding: 1em 0 0.8em 0;
   text-align: center;
 }
+@media only screen and (max-width: 480px) {
+  .textCostoTotal {
+    font-size: 12pt;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .textCostoTotal {
+    font-size: 18pt;
+  }
+}
 
-.submitt {
+.submit {
   height: 42px;
   width: 308px;
-  margin: 3.5em 0 0.8em 0;
   border-radius: 1em;
   background-color: #FFFBDF;
   text-align: center;
+}
+@media only screen and (max-width: 480px) {
+  .submit {
+    height: 12px;
+    width: 31px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .submit {
+    height: 27px;
+    width: 115px;
+  }
+}
+
+.containerFechaR {
+  padding: 0 0 0 25em;
+}
+@media only screen and (max-width: 480px) {
+  .containerFechaR {
+    padding: 0 0 0 3em;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .containerFechaR {
+    padding: 0 0 0 10em;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .submitPad {
+    margin: 0 0 0 1.3em;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .submitPad {
+    margin: 0 0 0 1.3em;
+  }
 }
 
 .obtenerInfo {
-  width: 85%;
+  width: 100%;
   height: 42px;
-  margin: 2.4em 0 1.8em 6em;
+  margin: 0.4em 0 0.4em;
   border-radius: 1em;
   background-color: #FFFBDF;
   text-align: center;
+}
+@media only screen and (max-width: 480px) {
+  .obtenerInfo {
+    height: 22px;
+    margin: 2em 0 3em 0.5em;
+  }
+}
+
+.qr {
+  padding: 0.4em 0em 0 10.5em;
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .qr {
+    padding: 0.4em 0em 0 3.3em;
+  }
+}
+
+.footertext {
+  text-align: center;
+  font-size: 12pt;
+  color: #FFFBDF;
+}
+@media only screen and (max-width: 480px) {
+  .footertext {
+    font-size: 0pt;
+    text-align: left;
+  }
+}
+
+.socials {
+  height: 2.4em;
+}
+@media only screen and (max-width: 480px) {
+  .socials {
+    height: 0.4em;
+  }
+}
+
+.footerItem {
+  display: inline;
+}
+
+.footerLink {
+  padding: 0.4em;
+  color: #ffffff;
+  font-size: 1.3em;
+}
+@media only screen and (max-width: 480px) {
+  .footerLink {
+    font-size: 1em;
+  }
+}
+
+.footerNavigator {
+  margin: auto;
+  width: 10.5em;
+}
+
+.footer {
+  width: 100%;
+  height: 120px;
+  background-color: #334443;
+  padding: 0.4em 0 0 0;
+}
+@media only screen and (max-width: 480px) {
+  .footer {
+    height: 4em;
+  }
 }
